# storage/api-docs/api-docs.json
@@ -281,6 +281,90 @@
                     }
                 }
             }
+        },
+        "/data/get-product-category": {
+            "get": {
+                "tags": [
+                    "Data"
+                ],
+                "summary": "get category",
+                "description": "get category",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/data/get-product-by-category-id": {
+            "post": {
+                "tags": [
+                    "Data"
+                ],
+                "summary": "Get product by category id",
+                "description": "Get product by category id",
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Get product by category id",
+                        "required": true,
+                        "schema": {
+                            "properties": {
+                                "categoryId": {
+                                    "type": "integer"
+                                },
+                                "page": {
+                                    "type": "integer"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/data/get-new-product": {
+            "get": {
+                "tags": [
+                    "Data"
+                ],
+                "summary": "get new product",
+                "description": "get new product",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {},
